<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    android:padding="5dp">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/background_light">

        <EditText
            style="@style/loginRegText"
            android:inputType="textPersonName"
            android:hint="@string/name_label"
            android:id="@+id/editText_name"
            android:layout_marginTop="123dp"
            android:layout_alignParentTop="true" />

        <EditText
            style="@style/loginRegText"
            android:inputType="textPassword"
            android:hint="@string/pass_label"
            android:id="@+id/editText_password"
            android:layout_below="@+id/editText_name"
            android:layout_marginTop="39dp" />

        <Button
            style="@style/ButtonStyle"
            android:text="@string/app_login"
            android:id="@+id/button_login"
            android:layout_below="@+id/editText_password"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="39dp" />


    </RelativeLayout>
</ScrollView>